project-portofolio/ingress-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-ingress
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: staging.myapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-app
                port:
                  number: 80
